shared-business-logics/services/business-support/sla-management-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sla-management-service
  namespace: business-support
  labels:
    app: sla-management-service
    team: team-e-business-support
spec:
  type: ClusterIP
  selector:
    app: sla-management-service
  ports:
  - name: http
    port: 8086
    targetPort: 8086
    protocol: TCP
  sessionAffinity: None
